--- a/snippets/sign-in-popup.liquid
+++ b/snippets/sign-in-popup.liquid
@@ -70,7 +70,7 @@
                   <input type="submit" class="btn btn-fullwidth" value="{{ 'customer.login.sign_in' | t }}">
       
                   <p class="text-left">
-                    {{ 'layout.customer.dont_have_account' | t }} <a href="{{ routes.account_login_url }}" id="customer_register_link" class="trigger_popup_login">{{ 'customer.register.title' | t  }}</a>
+                    {{ 'layout.customer.dont_have_account' | t }} <a href="{{ routes.account_register_url }}" id="customer_register_link" class="trigger_popup_login">{{ 'customer.register.title' | t  }}</a>
                   </p>
                 </div>
       
@@ -200,7 +200,7 @@
                     <input type="submit" class="btn btn-fullwidth" value="{{ 'customer.register.submit' | t }}">
         
                     <p class="text-left">
-                      {{ 'layout.customer.already_have_account' | t }}  <a href="{{ routes.account_register_url }}" id="customer_register_link" class="trigger_popup_register">{{ 'customer.login.title' | t  }}</a>
+                      {{ 'layout.customer.already_have_account' | t }}  <a href="{{ routes.account_login_url }}" id="customer_register_link" class="trigger_popup_register">{{ 'customer.login.title' | t  }}</a>
                     </p>
                   </div>
         
