add(Page): Directions page template

--- a/assets/custom-y.css.liquid
+++ b/assets/custom-y.css.liquid
@@ -1,6 +1,7 @@
 /*
 	1. Policy Pages (Template with banner and left menu) 
 	2. Sign Up / Sign In
+    3. Directions page (custom page template)
     00. Responsive query
 */
 
@@ -143,6 +144,56 @@
 p.text-recover {
     margin-bottom: 32px;
 }
+
+/* 3. Directions page (custom page template) */
+.page-directions-section .banner-container .page-width {
+    max-width: 1390px;
+}
+.page-directions-section .banner-content {
+    max-width: 528px;
+}
+.page-directions-section .banner-content h1,
+.page-directions-section .banner-content p {
+    color: var(--color-body-text);
+}
+.page-directions-section .banner-greentext p {
+    color: var(--color-sale-text);
+    font-size: var(--font-size-base);
+    margin-left: 16px;
+}
+.page-directions-section .banner-greentext svg {
+    min-width: 18px;
+    margin-top: 6px;
+}
+.banner-greentext {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: flex-start;
+    margin-top: 8px;
+}
+.page-directions-content {
+    background: #FFFFFF;
+    box-shadow: 0px 5px 60px rgba(0, 0, 0, 0.08);
+    border-radius: 5px;
+    width: 60%;
+    max-width: 730px;
+    padding: 56px;
+}
+.page-directions__content {
+    margin-top: 70px;
+}
+.page-directions-content h3 {
+    font-size: calc(((var(--font-size-header) - 4 ) / (var(--font-size-base))) * 1em);
+    font-family: var(--font-stack-body);
+    margin-top: 24px;
+    margin-bottom: 8px;
+}
+.page-directions-content h3:first-child {
+    margin-top: 40px;
+}
+
 
 /* 00. Responsive query */
 @media only screen and (min-width: 1024px) and (max-width: 1280px){
