upd(Directions page)

--- a/assets/custom-y.css.liquid
+++ b/assets/custom-y.css.liquid
@@ -62,6 +62,15 @@
 }
 .page-content--tabs .tab-pane {
     display: none;
+    color: var(--color-body-text);
+}
+.page-content--tabs .tab-pane ul,
+.page-content--tabs .tab-pane ol {
+    color: var(--color-body-text);
+}
+.page-content--tabs .tab-pane li {
+    list-style: inside;
+    margin-bottom: 6px;
 }
 .page-content--tabs .tab-pane.active {
     display: block;
