--- a/templates/page.newsletter.liquid
+++ b/templates/page.newsletter.liquid
@@ -1,3 +1,6 @@
+{% section 'newsletter-template' %}
+
+{% comment %}
 <div class="page-width">
   <div class="grid">
     <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
@@ -11,3 +14,4 @@
     </div>
   </div>
 </div>
+{% endcomment %}
