--- a/templates/page.program.liquid
+++ b/templates/page.program.liquid
@@ -1,11 +1,11 @@
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-{% section 'banner-about' %}
+{% section 'banner-program' %}
 
-<div class="page-width page-sidebar page-about">
+<div class="page-width page-sidebar page-program">
 
   <div class="page-sidebar-main">
-    <div class="page_content rte">
+    <div class="page_content rte">	
       {{ page.content }}  
+
     </div>
     
   </div>
@@ -71,5 +71,4 @@
   </div>
   
 </div>
-
 
