--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -175,6 +175,8 @@
   {% render 'boost-pfs-style' %}
 <!--end-boost-pfs-filter-css-->
 
+  {{ 'api.jquery.js' | shopify_asset_url | script_tag }}
+  <script>Shopify.money_format = "{{ shop.money_format }}";</script>
 
 </head>
 
@@ -206,7 +208,7 @@
     <li id="a11y-refresh-page-message">{{ 'general.accessibility.refresh_page' | t }}</li>
     <li id="a11y-selection-message">{{ 'general.accessibility.selection_help' | t }}</li>
   </ul>
-
+  
   {% unless template contains 'customers/' %}
     <!--begin-sign in/up popup-->
     {% include 'sign-in-popup' %}
