--- a/templates/page.how.liquid
+++ b/templates/page.how.liquid
@@ -1,13 +1,9 @@
-<div class="page-width">
-  <div class="grid">
-    <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
-      <div class="section-header text-center">
-        <h1>{{ page.title }}</h1>
-      </div>
+{% section 'banner-how' %}
 
-      <div class="rte">
-        {{ page.content }}
-      </div>
-    </div>
-  </div>
+<div class="page-width page-how">
+
+{% section 'page-how-content' %}
+
+{% section 'page-how-questions' %}
+ 
 </div>
