--- a/templates/page.policy-template.liquid
+++ b/templates/page.policy-template.liquid
@@ -1,5 +1,5 @@
 {% comment %}
-  The contents of the page.policy-template.liquid template can be found in /sections/page-policy-template.liquid
+  The contents of the page.details.liquid template can be found in /sections/page-policy-template.liquid
 {% endcomment %}
 
 {% section 'page-policy-template' %}
