--- a/snippets/include-banner-directions.liquid
+++ b/snippets/include-banner-directions.liquid
@@ -1,4 +1,5 @@
 
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
 {% if type == 'block' %}
   {% assign banner_image = block.settings.banner_image %}
   {% assign title = block.settings.title %}
@@ -11,7 +12,7 @@
   {% assign description_html = section.settings.description_html %}
 {% endif %}
 
-<div class="banner-container" style="background-image: url('{{ banner_image | img_url:'master' }}')">
+<div class="banner-container" style="background-image: url('{{ banner_image | img_url:'master' }}')"> 
   <div class="banner-content-wrapper">
     <div class="container page-width">
       <div class="banner-content">
