fix(page-sidebar-section.liquid)

--- a/snippets/page-sidebar-section.liquid
+++ b/snippets/page-sidebar-section.liquid
@@ -1,3 +1,5 @@
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+
 <div class="page-sidebar-section">
     <div class="sidebar-map">
       <img src="https://cdn.shopify.com/s/files/1/0539/1908/8815/files/Rectangle_252_2.png?v=1617137189">
