--- a/assets/custom-y.css.liquid
+++ b/assets/custom-y.css.liquid
@@ -1,5 +1,5 @@
 /*
-	1. Policy Pages (Template with banner and left menu) 
+	1. Policy, Refund, FAQ, Help Pages (Template with banner and left menu) 
 	2. Sign Up / Sign In
     3. Directions page (custom page template)
     00. Responsive query
@@ -9,7 +9,7 @@
     min-height: 60vh;
 }
 
-/* 1. Policy Pages*/
+/* 1. Policy, Refund, FAQ, Help Pages */
 .page-policy-content {
     margin-top: 70px;
     margin-bottom: 60px;
@@ -27,6 +27,8 @@
 .page-content--tabs .nav-tabs {
     width: 30%;
     max-width: 400px;
+    padding-bottom: 150px;
+    position: relative;
 }
 .page-content--tabs .nav-tabs li {
     align-items: center;
@@ -39,6 +41,21 @@
 .page-content--tabs .nav-tabs li:hover {
     background-color: #E8F7FB;
     
+}
+.page-content--tabs .nav-tabs li.nav-tabs--cta {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    background-color: transparent;
+}
+.page-content--tabs .nav-tabs li.nav-tabs--cta .btn {
+    color: var(--color-text-field);
+}
+.page-content--tabs .nav-tabs li.nav-tabs--cta .btn:hover {
+    color: var(--color-text-field);
+    background-color: var(--color-btn-primary-darker);
 }
 .page-content--tabs .nav-tabs li span {
     color: #8DB9C9;
@@ -74,6 +91,9 @@
 }
 .page-content--tabs .tab-pane.active {
     display: block;
+}
+.page-content--tabs .support-faq span {
+    color: #64626A;
 }
 
 /* 2. Sign Up / Sign In */
