--- a/templates/page.program.liquid
+++ b/templates/page.program.liquid
@@ -1,10 +1,11 @@
-{% section 'banner-about' %}
+{% section 'banner-program' %}
 
-<div class="page-width page-sidebar page-about">
+<div class="page-width page-sidebar page-program">
 
   <div class="page-sidebar-main">
-    <div class="page_content rte">
+    <div class="page_content rte">	
       {{ page.content }}  
+
     </div>
     
   </div>
@@ -12,5 +13,4 @@
   {% include 'page-sidebar-section' %}
   
 </div>
-
 
